--- a/src/stories/Buttons/LinkButton/Docs.mdx
+++ b/src/stories/Buttons/LinkButton/Docs.mdx
@@ -5,6 +5,8 @@ import { Meta, Title, Source } from '@storybook/blocks';
 <Title>Glare LinkButton Component</Title>
 <Meta of={LinkButtonStories}/>
 
+HTML anchor tag button
+
 ## LinkButton Styles
 #### Default Style
 <LinkButton href="#">Default Link Button</LinkButton>
