--- a/src/stories/components/Badges/Examples.mdx
+++ b/src/stories/components/Badges/Examples.mdx
@@ -5,8 +5,7 @@ import { Meta, Title, Source } from '@storybook/blocks';
 <Title>Badge Component</Title>
 <Meta of={BadgeStories}/>
 
-
-  This is the Glare Badge component which shows different styles and options.
+Behold the Glare Badge component, displaying a variety of styles and options. Check out some examples below!
 
 ## Badge Styles
 #### Default Style
