--- a/src/stories/components/Loading/RingLoading/Examples.mdx
+++ b/src/stories/components/Loading/RingLoading/Examples.mdx
@@ -20,7 +20,7 @@ This `RingLoading` component provides a visual indication of loading processes, 
 
 ### Medium Size
 <RingLoading component_size="M">
-  <span>Please wait...</span>
+  <span style={{fontSize:"1.5rem"}}>Loading...</span>
 </RingLoading>
 <Source code={`<RingLoading component_size="M">
   <span>Please wait...</span>
@@ -28,7 +28,7 @@ This `RingLoading` component provides a visual indication of loading processes, 
 
 ### Large Size
 <RingLoading component_size="L">
-  <span>Processing your request...</span>
+  <span style={{fontSize:"2rem"}}>Loading...</span>
 </RingLoading>
 <Source code={`<RingLoading component_size="L">
   <span>Processing your request...</span>
