--- a/src/stories/components/Alerts/Examples.mdx
+++ b/src/stories/components/Alerts/Examples.mdx
@@ -5,8 +5,9 @@ import { Meta, Title, Description, Story, Source } from '@storybook/blocks';
 <Title>Alert Component</Title>
 <Meta of={AlertStories}/>
 
-  This is the Glare Alert component which shows different alert messages and styles.
-  
+  The Glare Alert component is used to display different types of alert messages with varying styles. It supports multiple states to convey different levels of importance or feedback to the user.  
+
+## Component Styles
 ### Info Style
 <Alert component_label='Label' component_state='Info'/>
 
@@ -40,3 +41,4 @@ const App = () => (
 );
 
 export default App;
+```
