add code docs inputs

--- a/src/stories/Login/LoginButton/UseCases.mdx
+++ b/src/stories/Login/LoginButton/UseCases.mdx
@@ -13,7 +13,7 @@ import * as LoginButtonStories from './LoginButton.stories.tsx';
 ### Login Use
 
   <div style={{ maxWidth:"400px", display: 'flex',gap:"8px", flexDirection: 'column',margin:"30px 0" }}>
-        <InputField name={'example'} label={'Email'}  />
-        <InputField name={'example2'} label={'Password'}  />
+        <InputField name={'example'} type='email' label={'Email'}  />
+        <InputField name={'example2'} type="password" label={'Password'}  />
         <LoginButton>Login</LoginButton>
   </div>
