--- a/src/stories/components/Counters/UseCases.mdx
+++ b/src/stories/components/Counters/UseCases.mdx
@@ -8,7 +8,7 @@ import { Meta, Title, Source } from '@storybook/blocks';
   This is the Glare Counter component. here are some use cases
 
 ## Use Cases
-### Navigation Use Case
+### Buttons Use Case
     <div style={{padding:"10px", backgroundColor:"black", display: 'flex', flexDirection: "column", justifyContent: "center", alignItems: "center", gap: "10px", maxWidth: "300px" }}>
       <ButtonField with_divider>
         <IconButton icon={<i className="ri-notification-3-fill"></i>} count={6} />
