--- a/src/stories/Login/PassCheck/UseCases.mdx
+++ b/src/stories/Login/PassCheck/UseCases.mdx
@@ -12,8 +12,8 @@ import * as PassCheckStories from './PassCheck.stories.tsx';
 ### SignUp Use
 
   <div style={{ maxWidth:"400px", display: 'flex',gap:"8px", flexDirection: 'column',margin:"30px 0" }}>
-        <InputField name={'example'} label={'UserName'}  />
-        <InputField name={'example'} label={'Email'}  />
-        <InputField name={'example2'} label={'Password'}  />
+        <InputField  name={'example'} label={'UserName'}  />
+        <InputField type='email' name={'example'} label={'Email'}  />
+        <InputField type='password' name={'example2'} label={'Password'}  />
         <PassCheck value='123456'/>
   </div>
