--- a/src/stories/hooks/useShowDropDown.mdx
+++ b/src/stories/hooks/useShowDropDown.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source, Preview } from '@storybook/addon-docs/blocks';
+import { Meta, Source } from '@storybook/addon-docs/blocks';
 
 <Meta title="Hooks/useShowDropDown" />
 
@@ -8,7 +8,7 @@ This hook is used to manage the visibility of a dropdown component. It listens f
 
 <Source
   code={`
-const App = () => {
+    const App = () => {
        const dropdownRef = useRef(null);
       const { isActive, setIsActive } = useShowDropDown(dropdownRef);
 
