add themes docs

--- a/src/stories/styles/themes.mdx
+++ b/src/stories/styles/themes.mdx
@@ -6,6 +6,7 @@ import { Meta } from '@storybook/addon-docs/blocks';
 
 The `ThemeProvider` component provides theme management for your application, allowing themes to be persisted across sessions using local storage. It supports three themes: `"light"`, `"dark"`, and `"default"`.
 
+Note: this hook only work with react apps.
 ## Usage
 
 ### Wrapping your application
