--- a/src/stories/styles/themes.mdx
+++ b/src/stories/styles/themes.mdx
@@ -6,8 +6,7 @@ import { Meta } from '@storybook/addon-docs/blocks';
 
 The `ThemeProvider` component provides theme management for your application, allowing themes to be persisted across sessions using local storage. It supports three themes: `"light"`, `"dark"`, and `"default"`.
 
-Note: this hook only work with react apps.
-## Usage
+## Usage With React 
 
 ### Wrapping your application
 
@@ -49,6 +48,47 @@ const App = () => {
 };
 
 export default App;
+```
+
+## Usage With Next js
+
+you need to wrap the ThemeProvider inside another component just to use "use client"
+
+```jsx
+"use client"; // important
+import { ReactNode } from 'react';
+import { ThemeProvider } from 'torch-glare';
+export const ThemeProviderWrapper: React.FC<{ children: ReactNode }> = ({ children }) => {
+    return (
+        <ThemeProvider>
+            {children}
+        </ThemeProvider>
+    );
+};
+```
+
+then wrap your nextjs app with ThemeProviderWrapper 
+
+```jsx
+import { ThemeProviderWrapper } from "@/provider/themeProviderWrapper";
+
+export default async function RootLayout({
+  children,
+}: Readonly<{
+  children: React.ReactNode;
+}>) {
+  return (
+    <html >
+      <head>
+      </head>
+      <body >
+         <ThemeProviderWrapper>
+           {children}
+         </ThemeProviderWrapper>
+      </body>
+    </html>
+  );
+}
 ```
 
 ## API
