fix lint issues

--- a/src/stories/hooks/useDirectionCalc.mdx
+++ b/src/stories/hooks/useDirectionCalc.mdx
@@ -1,6 +1,6 @@
 import { Meta, Source } from '@storybook/addon-docs/blocks';
 import React, { useRef, useState } from 'react';
-import { UseDirectionCalc, DynamicContainer } from '../../lib'
+import { useDirectionCalc, DynamicContainer } from '../../lib'
 
 
 <Meta title="Hooks/useDirectionCalc" />
