add switcher component

--- a/src/stories/components/Steppers/StepperTab/Examples.mdx
+++ b/src/stories/components/Steppers/StepperTab/Examples.mdx
@@ -118,7 +118,7 @@ in this case you should use StepperPhoneArrow component to dispaly navigation bu
 ## Basic Usage
 
 ```jsx
-import { StepperTab } from 'your-component-library';
+import { StepperTab } from 'torch-glare';
 
 const App = () => (
   <div>
