--- a/src/stories/hooks/useResize.mdx
+++ b/src/stories/hooks/useResize.mdx
@@ -1,4 +1,4 @@
-import { Meta, Source, } from '@storybook/addon-docs/blocks';
+import { Meta, Source, } from '@storybook/blocks';
 import React, { useRef } from 'react';
 
 <Meta title="Hooks/useResize" />
