--- a/src/stories/styles/typography.mdx
+++ b/src/stories/styles/typography.mdx
@@ -1,4 +1,4 @@
-import { Meta, Source } from '@storybook/addon-docs/blocks';
+import { Meta, Source } from '@storybook/blocks';
 import React, { useRef, useState } from 'react';
 
 
