modify Table story

--- a/src/stories/components/Badges/UseCases.mdx
+++ b/src/stories/components/Badges/UseCases.mdx
@@ -1,4 +1,4 @@
-import { Badge ,FieldSection,DropDownMenu} from '@/components/base';
+import { Badge ,FieldSection,DropDownMenu} from '@/';
 import * as BadgeStories from './Badge.stories.tsx';
 import { Meta, Title, Source } from '@storybook/blocks';
 
